Layout shift on signup submission fix

--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -118,7 +118,7 @@
         text-align: center;
 
         @media screen and (min-width: 1024px) {
-            width: initial;
+            width: 375px;
             position: absolute;
             left: 0;
             bottom: 0;
