--- a/styles/signup.module.scss
+++ b/styles/signup.module.scss
@@ -31,5 +31,10 @@
     p {
         text-align: center;
         margin-bottom: 0;
+
+        @media screen and (min-width: 1024px) {
+            text-align: left;
+            padding: 0 !important;
+        }
     }
 }
